few PMD hints - unused imports, faster Stringbuffer.append()